@@ -1,5 +1,17 @@
 2013-01-10  Xavi Artigas  <xartigas@fluendo.com>
 
+	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
+	* src/gstttmlattribute.h:
+	* src/gstttmlevent.c: (gst_ttml_event_free),
+	(gst_ttml_event_new_span_begin), (gst_ttml_event_new_span_end):
+	* src/gstttmlevent.h:
+	* src/gstttmlparse.c: (gst_ttmlparse_parse_event):
+	* src/gstttmlstate.c: (gst_ttml_state_set_attribute),
+	(gst_ttml_state_get_attribute):
+	  - Name all unnamed unions and structs, for better error messages.
+
+2013-01-10  Xavi Artigas  <xartigas@fluendo.com>
+
 	* src/gstttmlstyle.c: (gst_ttml_style_reset):
 	  - Add missing style initializers (Not required because all are 0,
 	    but more coherent code).
